--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,9 @@
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>meteor</title>
 </head>
 
 <body>
-  {{> header}}
-  {{> showSettingsButton}} 
-  {{> balance}}
+  {{> header}} {{> showSettingsButton}} {{> balance}}
 </body>
