--- a/client/main.html
+++ b/client/main.html
@@ -5,5 +5,5 @@
 </head>
 
 <body>
-  {{> header}} {{> showSettingsButton}} {{> balance}}
+  {{> header}} {{> showSettingsButton}} {{> balance}} {{> addCoin}}
 </body>
